fix: spinner not centered in mobile and filter not working io's test

--- a/src/hoc/Layout/Layout.module.css
+++ b/src/hoc/Layout/Layout.module.css
@@ -26,7 +26,7 @@
     height: 80px;
     top: 50%;
     left: 50%;
-    transform: translateY(-50%);
+    transform: translate(-50%, -50%);
   }
   .LdsRing div {
     box-sizing: border-box;
